tdf#130600:Removed the New Category and Refresh icons from Template dialog

Change-Id: Iad22a84820056f05a3aae6d68f008fe904c56ffa